--- a/starter/output/style.css
+++ b/starter/output/style.css
@@ -11,7 +11,7 @@ ul {
 
 body {
   font-family: "Arial", sans-serif;
-  background-color: #f4f4f4;
+  background-color: #94b9d1;
   color: #333;
 }
 
